fix: attempt fix for overlapping seperators (#20)
* fix: attempt fix for overlapping seperators

ref: #19

* fix: attempt 2 fix for overlapping seperators

ref: #19

* fix: attempt 3 fix for overlapping seperators

ref: #19

* fix: attempt 4 fix for overlapping seperators

ref: #19

* fix: attempt 5 fix for overlapping seperators

ref: #19

--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,9 +1,14 @@
 .aboutSection {
-  /* 100vh - height of seperator */
-  height: calc(100vh - 100px);
+  display: flex;
+  flex-flow: row wrap-reverse;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 90vh;
+  height: fit-content;
   background: #153084;
-  position: relative;
-  margin: 0;
+  row-gap: 5rem;
+  column-gap: 2rem;
+  padding: 5rem 2rem;
 }
 
 .about h2 {
@@ -24,14 +29,11 @@ i {
 }
 
 .about {
+  margin: auto;
   padding: 1.5rem 5rem;
-  position: relative;
   width: 30rem;
   height: 17rem;
-  top: 25%;
-  left: 10%;
   border-radius: 50px;
-
   background: #153084;
   box-shadow:
     inset 18px 18px 36px #122970,
@@ -39,9 +41,7 @@ i {
 }
 
 .portrait {
-  position: absolute;
-  top: 25%;
-  right: 10vw;
+  margin: auto;
   border-radius: 150px;
   width: 20rem;
   height: 20rem;
@@ -49,40 +49,6 @@ i {
   box-shadow:
     6px 6px 12px #1c42b3,
     -6px -6px 12px #265af3;
-}
-
-@media (min-width: 1800px) {
-  .portrait {
-    right: 20%;
-  }
-  .about {
-    left: 20%;
-  }
-}
-
-@media (min-width: 1500px) and (max-width: 1800px) {
-  .portrait {
-    right: 15%;
-  }
-  .about {
-    left: 15%;
-  }
-}
-
-@media (max-width: 1300px) {
-  .about {
-    width: 30rem;
-    height: 17rem;
-    top: calc(10vh + 15rem + 5rem);
-    left: calc(50vw - 15rem - 5rem);
-  }
-
-  .portrait {
-    width: 15rem;
-    height: 15rem;
-    right: calc(50vw - 7.5rem);
-    top: 10vh;
-  }
 }
 
 @media (max-width: 700px) {
@@ -97,5 +63,10 @@ i {
   .about p {
     font-size: 1rem;
     line-height: 1.2rem;
+  }
+
+  .portrait {
+    width: 15rem;
+    height: 15rem;
   }
 }
